--- a/assets/css/caroussel.css
+++ b/assets/css/caroussel.css
@@ -27,6 +27,8 @@
     overflow: hidden;
     background-color: rgb(238, 238, 238);
     position: relative;
+    z-index: 1;
+
 }
 
 .galleryContainer .slideShowContainer .imageHolder {
