--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 2%;
 }
 
 /*main {*/
@@ -138,18 +139,22 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 0 -17px 0;
+    padding-bottom: 2vh;
+    /*margin: 0 0 -17px 0;*/
 }
 
 
 .logo img {
-    padding-left: 2px;
-    width: 200px;
-    max-height: 100px;
+    padding-left: 3px;
+    padding-right: 3px;
+    /*width: 200px;*/
+    /*max-height: 100px;*/
     flex: 1;
     border-radius: 10px;
-    margin-right: 3px;
-    margin-top: -14px;
+    /*margin-right: 3px;*/
+    /*margin-top: -14px;*/
+    max-height: 65px;
+    margin: auto;
 }
 
 /*Navigation*/
@@ -217,6 +222,7 @@ nav a:hover {
     text-align: center;
     text-decoration: none;
     color: white;
+    /*text-transform: uppercase;*/
 }
 
 ul .sous-menu {
@@ -224,6 +230,12 @@ ul .sous-menu {
     /*margin-left: -3%;*/
     margin-top: 2.4%;
 }
+
+.memberInfo {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
 
 .list_style {
     display: flex;
@@ -243,6 +255,7 @@ ul .sous-menu {
     justify-content: center;
 }
 
+
 .sous-menu .list_style {
     min-height: 5vh;
     min-width: 20vw;
@@ -250,6 +263,7 @@ ul .sous-menu {
 
 .sous-menu .list_style a {
     padding: 0;
+    text-transform: uppercase;
 }
 
 #menu-bar {
@@ -260,14 +274,17 @@ ul .sous-menu {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 100px;
-    /*margin: 0 1px -14px -1px;*/
+    padding-bottom: 2vh;
+    /*width: 100px;*/
+    margin: 0 3px 0 3px;
 }
 
 .photo img {
     box-shadow: 0px 0px 10px 0px tomato;
     /*margin: 0 1px 0 2px;*/
-    width: 105%;
+    /*width: 105%;*/
+    max-height: 65px;
+    width: auto;
 }
 
 /* Main Vue */
@@ -420,6 +437,35 @@ form.form-inscription {
     width: 325px;
     border-radius: 10px;
 }
+
+p.deleteCom {
+    display: flex;
+    justify-content: center;
+    width: 100px;
+    margin-left: 5px;
+    box-shadow: 1px 1px 1px #D83F3D;
+    cursor: pointer;
+    overflow: visible;
+    background-color: #A0D3FF;
+    padding: 3px;
+    border: 1px solid #1C0A77;
+    border-radius: 5px;
+}
+
+p.deleteCom:hover {
+    background-color:#219FDC;
+}
+
+p.deleteCom:active {
+    background-color:#FCDEDE;
+    box-shadow:1px 1px 1px #D83F3D inset;
+}
+
+a.deleteCom {
+    color: black;
+}
+
+
 
 fieldset {
     margin-bottom:10px;
@@ -667,13 +713,12 @@ div.form-create:nth-child(6) > label:nth-child(1) {
 
 .comment-added {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    width: 79vw;
+
 }
 
-div.comment-added:nth-child(n) {
-    width: 90%;
-}
 
 textarea.comment-text {
     background: url(../../assets/img/by_default/ombre.png) center center repeat; /* This ruins default border */
@@ -909,7 +954,7 @@ a.btn:nth-child(2) {
     }
 
     .logo img {
-        width: 100px;
+        max-width: 100%;
         max-height: 50px;
         border-radius: 5px;
         margin-left: 56%;
