--- a/assets/css/burger.css
+++ b/assets/css/burger.css
@@ -4,7 +4,6 @@
         justify-content: space-around;
     }
 
-
     /*style du burger*/
     #menu {
         display: flex;
@@ -36,7 +35,6 @@
     }
 
     /*style du menu*/
-
     .deconnection {
         display: flex;
     }
@@ -69,10 +67,8 @@
         min-width: 160px;
     }
 
-
-
     .list_style {
-        min-height: 6vh;
+        min-height: 2rem;
         min-width: 15vw;
     }
 
@@ -83,7 +79,7 @@
     #menu-bar {
         position: absolute;
         top: 0;
-        margin-left: -44%;
+        margin-left: -50%;
 
     }
 
