--- a/assets/css/caroussel.css
+++ b/assets/css/caroussel.css
@@ -129,8 +129,6 @@
     background-image: url("../img/by_default/pause_btn4.png");
 }
 
-
-
 .galleryContainer #dotsContainer {
     display: flex;
     justify-content: center;
@@ -162,14 +160,14 @@
 
 .galleryContainer .moveLeftCurrentSlide {
     animation-name: moveLeftCurrent;
-    animation-direction: 0.5s;
+    /*animation-direction: 0.5s;*/
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
 
 .galleryContainer .moveLeftNextSlide {
     animation-name: moveLeftNext;
-    animation-direction: 0.5s;
+    /*animation-direction: 0.5s;*/
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
@@ -198,7 +196,7 @@
 
 .galleryContainer .moveRightCurrentSlide {
     animation-name: moveRightCurrent;
-    animation-direction: 0.5s;
+    /*animation-direction: 0.5s;*/
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
@@ -216,7 +214,7 @@
 
 .galleryContainer .moveRightNextSlide {
     animation-name: moveRightNext;
-    animation-direction: 0.5s;
+    /*animation-direction: 0.5s;*/
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
