--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,6 @@
 
 }
 
-
 .objet {
     display: flex;
     flex-direction: column;
@@ -77,19 +76,17 @@
     margin: 0 2%;
 }
 
-
 h1 {
     color: black;
     text-align: center;
     font-family: "ClearSans", Arial, Helvetica, sans-serif;
     letter-spacing: .1rem;
 
-
 }
 
 h2 {
     color: rgb(128, 125, 99);
-    text-align: center;
+    /*text-align: center;*/
     font-family: "AlexBrush", Verdana, Geneva, Tahoma, sans-serif;
     /*padding: 1px 1px;*/
 }
@@ -108,6 +105,7 @@ h5 {
     text-align: start;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: darkgrey;
+    font-size: medium;
 }
 
 p {
@@ -115,7 +113,7 @@ p {
     font-family: "ClearSans", sans-serif;
     padding: 1vw 1vh;
     letter-spacing: 1px;
-    line-height : 120%;
+    line-height: 120%;
 }
 
 a, li {
@@ -124,11 +122,15 @@ a, li {
     color: #2050a6;
 }
 
+span {
+    line-height: 1.3;
+    font-family: "ClearSans", sans-serif;
+}
+
 mark {
     text-transform: uppercase;
     font-weight: bolder;
 }
-
 
 label,
 textarea, legend {
@@ -137,7 +139,6 @@ textarea, legend {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
 }
-
 
 article {
     display: flex;
@@ -155,11 +156,10 @@ article {
 #cache {
     display: none;
 }
+
 #cache:target {
     display: block;
 }
-
-
 
 /*--------------------------------------------------------
            MIS EN PAGE
@@ -172,28 +172,19 @@ article {
     justify-content: center;
     align-items: center;
     padding-bottom: 2vh;
-    /*margin: 0 0 -17px 0;*/
 }
-
 
 .logo img {
     padding-left: 3px;
     padding-right: 3px;
-    /*width: 200px;*/
-    /*max-height: 100px;*/
     flex: 1;
     border-radius: 10px;
-    /*margin-right: 3px;*/
-    /*margin-top: -14px;*/
     max-height: 65px;
     margin: auto;
 }
 
 /*Navigation*/
 
-/*.deconnection {*/
-    /*display: none;*/
-/*}*/
 
 nav {
     display: flex;
@@ -210,8 +201,6 @@ nav ul {
     border-radius: 10px;
     border: solid 2px #006e8b;
     box-shadow: inset 0 0 0 1px #12a0bf, 0 1px 4px 0 rgba(0, 0, 0, 0.9);
-    /*border-radius: 5px;*/
-    /*border: solid 1px #006e8b;*/
     padding: 0;
     flex-wrap: wrap;
 }
@@ -239,8 +228,6 @@ nav ul li ul {
     display: none;
 }
 
-
-
 nav a:hover {
     color: #760001;
     border-bottom: 1px solid #760001;
@@ -254,20 +241,18 @@ nav a:hover {
     text-align: center;
     text-decoration: none;
     color: white;
-    /*text-transform: uppercase;*/
 }
 
 ul .sous-menu {
     z-index: 2;
-    /*margin-left: -3%;*/
     margin-top: 2.4%;
 }
 
 .memberInfo {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+    font-family:'kaushan-script', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.2em;
+    margin-right: 4vw;
 }
-
 
 .list_style {
     display: flex;
@@ -286,7 +271,6 @@ ul .sous-menu {
     flex-direction: column;
     justify-content: center;
 }
-
 
 .sous-menu .list_style {
     min-height: 5vh;
@@ -312,9 +296,7 @@ ul .sous-menu {
 }
 
 .photo img {
-    box-shadow: 0px 0px 10px 0px tomato;
-    /*margin: 0 1px 0 2px;*/
-    /*width: 105%;*/
+    box-shadow: 0 0 10px 0 tomato;
     max-height: 65px;
     width: auto;
     border-radius: 10px;
@@ -337,12 +319,16 @@ ul .sous-menu {
 
 .bienvenue {
     bottom: 0;
-    display: none;
+    /*display: none;*/
     justify-content: center;
     align-items: center;
     flex: 10;
     width: 99%;
+    font-size: medium;
+    text-align: center;
+    font-family: "kaushan-script", Verdana, Geneva, Tahoma, sans-serif;
 }
+
 
 .search_bouton {
     flex: 2;
@@ -361,7 +347,26 @@ ul .sous-menu {
 }
 
 .bouton_commande {
-    margin: 2px 2px;
+    margin: 2px 10px;
+}
+
+.bouton_commande a, #cache a, .justify_article a, a.comment-modify {
+    box-shadow: 1px 1px 1px #D83F3D;
+    cursor: pointer;
+    overflow: visible;
+    background-color: #A0D3FF;
+    padding: 3px;
+    border: 1px solid #1C0A77;
+    border-radius: 5px;
+}
+
+.bouton_commande a:hover, #cache a:hover, .justify_article a:hover, a.comment-modify:hover {
+    background-color: #219FDC;
+}
+
+.bouton_commande a:active, #cache a:active, .justify_article a:active, a.comment-modify:active {
+    background-color: #FCDEDE;
+    box-shadow: 1px 1px 1px #D83F3D inset;
 }
 
 div.bouton_commande:nth-child(n) > a:nth-child(1) {
@@ -373,9 +378,9 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
     flex-direction: column;
     background-color: ghostwhite;
     border-radius: 10px 10px;
-    min-height: 75vh;
     justify-content: flex-start;
     min-width: 75vw;
+    padding: 1px 1px 5px 1px;
 }
 
 .top_article_form {
@@ -383,7 +388,6 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
     flex-direction: column;
     background-color: ghostwhite;
     border-radius: 10px 10px;
-    /*min-height: 75vh;*/
     justify-content: flex-start;
     margin: 1vh 1vw;
 }
@@ -397,19 +401,19 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
 .justify_article img {
     float: left;
     margin-right: 1em;
-    /*height: 30vh;*/
     width: 30vw;
     max-width: 100%;
     height: auto;
     border-radius: 10px;
+    margin-bottom: 0.5em;
 }
 
 .program {
-     display: flex;
-     justify-content: space-around;
-     background-color: ghostwhite;
-     border-radius: 10px 10px 10px 10px;
- }
+    display: flex;
+    justify-content: space-around;
+    background-color: ghostwhite;
+    border-radius: 10px 10px 10px 10px;
+}
 
 .program_view {
     display: flex;
@@ -429,27 +433,21 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
 
 div.form_view {
     display: flex;
-    /*justify-content: center;*/
-    /*align-items: flex-start;*/
 }
 
 .section_view {
-    /*min-height: 75vh;*/
     margin: 1vh 1vw;
 }
-
 
 aside.form_view {
     flex: 3;
     background-color: ghostwhite;
-    /*align-self: flex-start;*/
     margin: 0 2vw 0 2vw;
     border-radius: 10px;
 
 }
-/*aside.form_view:nth-child(3) {*/
-    /*align-self: flex-start;*/
-/*}*/
+
+
 
 aside.form_view:nth-child(3) {
     display: flex;
@@ -457,19 +455,13 @@ aside.form_view:nth-child(3) {
     border-radius: 10px;
 }
 
-
-
-
-
-form.form-inscription {
+form.form-inscription, form.form-create, .form-create p label.form-inscription {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    /*width: 100%;*/
     background-color: #FAFAFA;
-    padding: 0 10px 0 0;
-    width: 325px;
+    padding: 0 1em 0 1em;
     border-radius: 10px;
 }
 
@@ -488,39 +480,35 @@ p.deleteCom {
 }
 
 p.deleteCom:hover {
-    background-color:#219FDC;
+    background-color: #219FDC;
 }
 
 p.deleteCom:active {
-    background-color:#FCDEDE;
-    box-shadow:1px 1px 1px #D83F3D inset;
+    background-color: #FCDEDE;
+    box-shadow: 1px 1px 1px #D83F3D inset;
 }
 
 a.deleteCom {
     color: black;
 }
 
-
-
 fieldset {
-    margin-bottom:10px;
-    border:1px solid #C4C2E3;
+    margin-bottom: 10px;
+    border: 1px solid #C4C2E3;
     border-radius: 5px;
 }
 
 legend {
-    font-weight:bold
+    font-weight: bold
 }
 
 input, textarea, select, option {
-    background-color:#A0D3FF;
+    background-color: #A0D3FF;
     cursor: pointer;
 }
 
 input.image {
-    background-color:#A0D3FF;
-    width: 0.1px;
-    height: 0.1px;
+    background-color: #A0D3FF;
     opacity: 0;
     overflow: hidden;
     position: absolute;
@@ -528,36 +516,38 @@ input.image {
 }
 
 input[type=submit]:hover, input[type=reset]:hover {
-    background-color:#219FDC;
+    background-color: #219FDC;
 }
 
 input[type=submit]:active, input[type=reset]:active {
-    background-color:#FCDEDE;
-    box-shadow:1px 1px 1px #D83F3D inset;
+    background-color: #FCDEDE;
+    box-shadow: 1px 1px 1px #D83F3D inset;
 }
 
-div.form-inscription:nth-child(5) > label:nth-child(1) {
+div.form-inscription:nth-child(5) > label:nth-child(1),
+.form-create label.form-create,
+fieldset div.form-create label.form-inscription {
     background-color: #A0D3FF;
     margin-bottom: 10px;
     border-radius: 5px;
     border: 1px solid #1C0A77;
     cursor: pointer;
+    padding: 1vh 1vw;
+
 }
 
-
 input, textarea, select {
-    padding:3px;
-    border:1px solid #1C0A77;
-    border-radius:5px;
-    width:200px;
-    box-shadow:1px 1px 2px #C0C0C0 inset;
+    padding: 3px;
+    border: 1px solid #1C0A77;
+    border-radius: 5px;
+    box-shadow: 1px 1px 2px #C0C0C0 inset;
 }
 
 input[type=submit], input[type=reset] {
-    width:105px;
-    margin-left:5px;
-    box-shadow:1px 1px 1px #D83F3D;
-    cursor:pointer;
+    width: 105px;
+    margin-left: 5px;
+    box-shadow: 1px 1px 1px #D83F3D;
+    cursor: pointer;
 }
 
 form.form-connexion > div:nth-child(1) {
@@ -568,45 +558,32 @@ form.form-inscription > div:nth-child(3) {
     display: flex;
 }
 
-
-div.form-inscription:nth-child(5) {
+div.form-inscription:nth-child(5), div.form-create:nth-child(n) {
     display: flex;
-    justify-content: center;
     align-items: center;
 }
-
-label.form-image {
-    padding: 1vh 1vw;
-}
-
-
-
 
 .container_form {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: stretch;
     min-height: 75vh;
     min-width: 33vw;
     max-width: 80vw;
     align-self: flex-start;
     flex: 1;
     margin: 0 auto;
+    background-color: ghostwhite;
+    border-radius: 10px;
 }
 
-
-.container_form > div:nth-child(1) {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+main.container_form div.bouton_commande {
+    align-self: flex-end;
+    margin-top: 2em;
 }
-
-
-
-
 
 .container {
     display: flex;
@@ -631,9 +608,41 @@ label.form-image {
     list-style: none;
 }
 
+.view ul li a {
+    box-shadow: 1px 1px 1px #D83F3D;
+    cursor: pointer;
+    overflow: visible;
+    background-color: #A0D3FF;
+    padding: 3px;
+    border: 1px solid #1C0A77;
+    border-radius: 5px;
+
+}
+
+.view ul li a:hover {
+    background-color: #219FDC;
+}
+
+.view ul li a:active {
+    background-color: #FCDEDE;
+    box-shadow: 1px 1px 1px #D83F3D inset;
+}
+
 /**********Tableau********************/
-.table-update {
+table.table-update {
     display: flex;
+    border-radius: 10px;
+    border: 1px solid blueviolet;
+}
+
+table.table-update > tbody:nth-child(2) > tr:nth-child(n) > th:nth-child(1) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+table.table-update > tbody:nth-child(2) > tr:nth-child(5) {
+    display: block;
 }
 
 td,
@@ -664,7 +673,7 @@ caption {
     caption-side: bottom;
 }
 
-button.hidden-btn {
+a.hidden-btn {
     display: none;
 }
 
@@ -688,18 +697,15 @@ table {
     align-items: center;
 }
 
-
 .table-update > div:nth-child(1) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > th:nth-child(1) {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-
 .table-update > div:nth-child(1) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > th:nth-child(2) {
     flex-direction: column;
 }
-
 
 .table-update > div:nth-child(1) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(5) > td:nth-child(2) {
     display: flex;
@@ -709,28 +715,23 @@ table {
 
 /***********Formulaire CreateArticle***********/
 
-
-
 div.top_article:nth-child(n) {
     width: 100%;
 
 }
 
-form.form-create {
-    min-width: 75vw;
-}
-
-
 
 div.form-create:nth-child(6) > label:nth-child(1) {
-    background-color:
-    #A0D3FF;
+    background-color: #A0D3FF;
     margin-bottom: 10px;
     border-radius: 5px;
-    border: 1px solid
-    #1C0A77;
+    border: 1px solid #1C0A77;
     cursor: pointer;
 }
+
+/**********Category***************/
+
+
 
 /***********Comments***********/
 
@@ -749,26 +750,34 @@ div.form-create:nth-child(6) > label:nth-child(1) {
 
 }
 
-
 textarea.comment-text {
     background: url(../../assets/img/by_default/ombre.png) center center repeat; /* This ruins default border */
     resize: none;
     overflow: auto;
 }
 
+main div.back-page {
+    justify-content: center;
+}
+
 .back-page {
-    /*align-self: flex-end;*/
-    background-color: cornflowerblue;
     border-radius: 2px 2px;
     margin: 2px 0 2px 0;
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    align-self: center;
+    min-width: 80vw;
 }
 
 .back-page a {
+    display: flex;
+    justify-content: flex-end;
+    background-color: cornflowerblue;
     text-decoration: none;
     color: cornsilk;
+    padding: 0 2px 0 2px;
+    border-radius: 5px;
+    margin-right: 2em;
 }
 
 div.back-page:nth-child(2) {
@@ -819,7 +828,6 @@ section.content:nth-child(3) {
 
 }
 
-
 .copyright {
     display: flex;
     justify-content: center;
@@ -836,10 +844,6 @@ section.content:nth-child(3) {
 }
 
 
-/*.top-button {*/
-    /*flex: 1;*/
-/*}*/
-
 .top-button a {
     color: whitesmoke;
 }
@@ -855,8 +859,6 @@ section.content:nth-child(3) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0%;
-    padding: 0%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     list-style: none;
     text-decoration: none;
@@ -869,17 +871,12 @@ section.content:nth-child(3) {
     width: 100%;
 }
 
-
-
 /* Style accordeon */
-
-
 
 footer {
 
     display: flex;
     flex-direction: column;
-    /*height: 240px;*/
 }
 
 .menu {
@@ -894,11 +891,11 @@ footer {
     overflow: hidden;
 
 }
+
 li.item:nth-child(4) {
     display: flex;
     justify-content: stretch;
 }
-
 
 li.item:nth-child(4) > a:nth-child(1) {
     width: 90%;
@@ -908,7 +905,6 @@ a.btn:nth-child(2) {
     width: 10%;
 }
 
-
 .btn {
     display: block;
     padding: 10px 20px;
@@ -916,6 +912,7 @@ a.btn:nth-child(2) {
     color: cornsilk;
     position: relative;
     text-decoration: none;
+    flex: 1;
 }
 
 .btn:before {
@@ -927,6 +924,11 @@ a.btn:nth-child(2) {
     left: 20px;
     bottom: -7px;
     transform: rotate(45deg);
+}
+
+.separate {
+    flex: 5;
+    background: #34495e;
 }
 
 .smenu {
@@ -978,7 +980,6 @@ a.btn:nth-child(2) {
     min-height: 75vh;
 }
 
-
 @media all and (max-width: 1024px) {
 
     article {
@@ -989,17 +990,13 @@ a.btn:nth-child(2) {
         max-width: 100%;
         max-height: 50px;
         border-radius: 5px;
-        margin-left: 56%;
-        /*margin-top: 1px;*/
+        margin-left: 65%;
 
     }
-
 
     nav {
         justify-content: flex-start;
     }
-
-
 
     li {
         width: 100%;
@@ -1009,12 +1006,9 @@ a.btn:nth-child(2) {
         border-radius: 5px;
     }
 
-
     .memberInfo {
-        /*width: 80px;*/
-        /*margin-left: 1px;*/
         font-size: 0.8em;
-        margin-left: 100%;
+        margin-left: 65%;
         min-width: 20px;
     }
 
@@ -1042,8 +1036,6 @@ a.btn:nth-child(2) {
         display: none;
     }
 
-
-
     .bienvenue {
         display: flex;
         flex-direction: column;
@@ -1051,7 +1043,6 @@ a.btn:nth-child(2) {
     }
 
     .justify_article img {
-        /*height: 10vh;*/
         width: 15vw;
         max-width: 100%;
         height: auto;
@@ -1066,7 +1057,6 @@ a.btn:nth-child(2) {
     .btn {
         padding: 8px 15px;
     }
-
 
     h5 {
         margin: 0;
@@ -1090,23 +1080,19 @@ a.btn:nth-child(2) {
         min-height: 50px;
         padding-bottom: 8px;
     }
+
     .copyright > p:nth-child(1) {
         margin-bottom: -11px;
     }
-
 
     #message > div:nth-child(2) {
         flex-wrap: nowrap;
 
     }
 
-
-
-
     /******Tableau***********/
     .table-update {
         overflow-x: auto;
-        /* max-width: 500px;      */
     }
 
     th:nth-child(3), td:nth-child(3) {
@@ -1144,7 +1130,6 @@ a.btn:nth-child(2) {
         align-items: center;
     }
 
-
     .table-update > div:nth-child(1) {
         display: flex;
         flex-direction: column;
@@ -1155,8 +1140,6 @@ a.btn:nth-child(2) {
     .table-update > div:nth-child(1) > form:nth-child(2) {
         display: contents;
     }
-
-
 
     .table-update > div:nth-child(1) > table:nth-child(1) {
         display: flex;
@@ -1178,7 +1161,6 @@ a.btn:nth-child(2) {
 
     .table-update > div:nth-child(1) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(5) > td:nth-child(2) {
         flex-direction: column;
-        flex-direction: column;
     }
 
     .table-update > div:nth-child(1) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(5) > td:nth-child(2) > input:nth-child(2) {
@@ -1187,16 +1169,18 @@ a.btn:nth-child(2) {
         flex-direction: column;
     }
 
-    button.hidden-btn {
+    a.hidden-btn {
         display: block;
     }
 
-    /*******Formulaire CreateArticle***********/
+    table.all_members {
+        font-size: 0.7em;
+    }
 
+    /*******Formulaire CreateArticle***********/
     aside.form_view, aside.form_view:nth-child(3) {
         display: none;
     }
-
 
     textarea {
         width: 100%;
@@ -1205,12 +1189,8 @@ a.btn:nth-child(2) {
         box-sizing: border-box;
         border: 2px solid #ccc;
         border-radius: 4px;
-        /*background-color: #f8f8f8;*/
         resize: none;
     }
-
-
-
 
     /*********** Comments **********/
     .comment-added {
