Added mentions, questions, conditions pages

--- a/assets/css/caroussel.css
+++ b/assets/css/caroussel.css
@@ -160,14 +160,14 @@
 
 .galleryContainer .moveLeftCurrentSlide {
     animation-name: moveLeftCurrent;
-    /*animation-direction: 0.5s;*/
+    /*animation-duration: 0.5s;*/
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
 
 .galleryContainer .moveLeftNextSlide {
     animation-name: moveLeftNext;
-    /*animation-direction: 0.5s;*/
+    /*animation-duration: 0.5s;*/
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
@@ -196,7 +196,7 @@
 
 .galleryContainer .moveRightCurrentSlide {
     animation-name: moveRightCurrent;
-    /*animation-direction: 0.5s;*/
+    /*animation-duration: 0.5s;*/
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
@@ -214,7 +214,7 @@
 
 .galleryContainer .moveRightNextSlide {
     animation-name: moveRightNext;
-    /*animation-direction: 0.5s;*/
+    /*animation-duration: 0.5s;*/
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
