--- a/assets/css/burger.css
+++ b/assets/css/burger.css
@@ -24,6 +24,7 @@
         border-radius: 5px;
         transition: 0.5s ease;
         /*margin-left: -87px;*/
+        opacity: 0.7;
     }
 
     #bar1 {
