--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@ a, li {
     text-decoration: none;
     font-family: "rubik", sans-serif;
     color: #2050a6;
+    transition-duration: 0.5s;
 }
 
 span {
@@ -420,6 +421,7 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
     padding-top: 0.5em;
 
 }
+
 
 .program {
     display: flex;
