--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,9 +62,10 @@
     padding-top: 1%;
     padding-bottom: 1%;
     flex-wrap: nowrap;
-    background-color: rgba(1, 82, 60, 0.98);
+    /* background-color: rgba(1, 82, 60, 0.98); */
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    background-image: linear-gradient(#1F2A36, #D9EFF5);
 
 }
 
@@ -205,7 +206,7 @@ nav ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgb(144, 192, 194);
+    background: #223645;
     list-style: none;
     border-radius: 10px;
     border: solid 2px #006e8b;
@@ -530,7 +531,7 @@ legend {
 }
 
 input, textarea, select, option {
-    background-color: #A0D3FF;
+    background-color: #E6E296;
     cursor: pointer;
 }
 
@@ -555,7 +556,7 @@ div.form-inscription:nth-child(5) > label:nth-child(1),
 .form-create label.form-create,
 fieldset div.form-create label.form-inscription,
 form.form-inscription div.form-inscription label.form-inscription{
-    background-color: #A0D3FF;
+    background-color: #E6E296;
     margin-bottom: 10px;
     border-radius: 5px;
     border: 1px solid #1C0A77;
