--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,8 @@
     font-style: normal;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
 /*------------------------------------------------------
             ANIMATION
 --------------------------------------------------------*/
@@ -89,6 +91,13 @@
     margin: auto;
 
 }
+
+.header-body {
+    display: flex;
+    flex-direction: column;
+}
+
+
 
 .en-tete {
     display: flex;
@@ -210,6 +219,53 @@ article {
 /*--------------------------------------------------------
            MIS EN PAGE
 --------------------------------------------------------*/
+/* Countdown timer */
+
+.countdown-body {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    max-height: 15vh;
+    background-color: darkred;
+}
+
+.countdown-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.big-text {
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 0.2;
+    margin: 0 0.5rem;
+    
+}
+
+.title-chess {
+    margin: 0 0;
+    padding: 0 0;
+}
+
+.countdown-el {
+    display: inherit;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-width: 10vw;
+    min-height: 7vh;
+    padding-bottom: 0.4rem;
+}
+
+.whitesmoke {
+    color: whitesmoke;
+}
+
+
 /* Template En-téte*/
 
 .logo {
@@ -1109,6 +1165,11 @@ a.btn:nth-child(2) {
     }
 
     /* Main Vue */
+
+    .countdown-body {
+        display: none;
+    }
+
     .banniere {
         height: 5em;
     }
