remove favicon.io error

--- a/assets/sass/styles.css
+++ b/assets/sass/styles.css
@@ -30,4 +30,20 @@
       -ms-flex-align: center;
           align-items: center;
 }
+
+.logo img {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
+}
+
+.logo img:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
 /*# sourceMappingURL=styles.css.map */
