--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -17,3 +17,12 @@
     justify-content: center;
     align-items: center;
 }
+
+.logo img{
+    transform: scale(1);
+    transition-property: transform;
+    transition-duration: 500ms;
+    &:hover {
+        transform: scale(1.2);
+    }
+}
