--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -2,7 +2,7 @@
     background-color: red;
     border-radius: 1rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     max-height: 15vh;
 
@@ -14,9 +14,11 @@
 .timer-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    min-width: 15rem;
 }
+
 
 .logo img{
     transform: scale(1);
