--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1039,7 +1039,7 @@ a.btn:nth-child(2) {
     width: 10%;
 }
 
-.btn {
+ul li a.btn {
     display: block;
     padding: 10px 20px;
     background: #34495e;
@@ -1048,9 +1048,11 @@ a.btn:nth-child(2) {
     text-decoration: none;
     flex: 1;
     width: 100%;
+    transition-property: color;
+    transition-duration: 0.5s;
 }
 
-.btn:before {
+ul li a.btn:before {
     content: "";
     position: absolute;
     width: 14px;
@@ -1061,19 +1063,24 @@ a.btn:nth-child(2) {
     transform: rotate(45deg);
 }
 
+ul li a.btn:hover {
+    color: rgb(129, 95, 95);    
+    font-weight: bold;
+}
+
 .separate {
     flex: 5;
     background: #34495e;
 }
 
-.smenu {
+ul li div.smenu {
     background: #333;
     overflow: hidden;
     transition: max-height 0.3s;
     max-height: 0;
 }
 
-.smenu a {
+ul li div.smenu a {
     display: block;
     padding: 16px 26px;
     color: cornsilk;
