--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,8 @@
   font-style: normal;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&family=Ubuntu&display=swap'); */
 
 /*------------------------------------------------------
             ANIMATION
