--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1218,6 +1218,9 @@ ul li div.smenu a {
   flex-direction: row;
   background: rgb(253, 253, 251);
   padding: 10px 30px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  overflow: hidden;
 }
 
 .coach-description {
