--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -693,6 +693,10 @@ input[type='reset'] {
 
 form.form-connexion > div:nth-child(1) {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 form.form-inscription > div:nth-child(3) {
@@ -716,8 +720,8 @@ main.container_form div.bouton_commande {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  min-height: 75vh;
-  /* min-width: 40vw; */
+  /* min-height: 75vh; */
+  /* min-width: 40vw; */ 
   max-width: 80vw;
   align-self: flex-start;
   flex: 1;
