--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,7 +509,7 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
 .justify_article {
   padding: 1vh 1vw;
   text-decoration: none;
-  column-count: 3;
+  /* column-count: 3; */
   text-align: justify;
   hyphens: auto;
 }
@@ -517,11 +517,14 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
 .justify_article img {
   float: left;
   margin-right: 1em;
+  margin-top: 1rem;
   width: 30vw;
+  height: 50vh;
   max-width: 100%;
-  height: auto;
+  /* height: auto; */
   border-radius: 10px;
   margin-bottom: 0.5em;
+  object-fit: cover;
 }
 
 .justify_form img {
