--- a/assets/css/caroussel.css
+++ b/assets/css/caroussel.css
@@ -41,6 +41,7 @@
 .galleryContainer .slideShowContainer .imageHolder img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .galleryContainer .slideShowContainer .imageHolder .captionText {
